--- a/backstage/pubspec.yaml
+++ b/backstage/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.7.1
   firebase_core: ^2.13.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
