--- a/backstage/pubspec.yaml
+++ b/backstage/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.7.1
   firebase_core: ^2.13.0
   uuid: ^3.0.7
+  collection: ^1.17.1
 
 dev_dependencies:
   flutter_test:
