--- a/song_request/pubspec.yaml
+++ b/song_request/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.7.1
   firebase_core: ^2.13.0
   grouped_list: ^5.1.2
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
